dev/sass/game.scss
@import "compass/reset";
@import "compass/css3";
@import "objects";

@import "dev";
@import "touch";

body, 
html {
  width: 100%; height: 100%;
}

body{
  background: #222;
  font-family: "helvetica neue";
  color: #FFF;
  overflow: hidden;
}

.mask{
  position: relative;
  z-index: 1;
  display: block;
  width: 100%; height: 100%;
  overflow: hidden;
  
  @include transform(scale(1));
  @include perspective(800px);
}

@media screen and (device-aspect-ratio: 40/71) {
  .mask{
    @include transform(scale(0.4));
  }
}

@media screen and (device-aspect-ratio: 3/4) {
  .mask{
    @include transform(scale(0.8));
  }
}


.camera{
  display: block;
  position: absolute;
  left: 50%; top:50%;

  @include transform-style(preserve-3d);
  @include transform(rotateX(45deg));
}

.map {
  display: block;
  width: 520px; height: 640px;
  //background: url(img/LVL-1-mini-map.png);
  
  @include transform(translate3D(-260px, -320px, 240px) rotateZ(45deg));
  @include transform-style(preserve-3d);
}

.charachter{
  position: absolute;
  left: 0px; top: 0px;
  display: block;
  width: 20px; height: 20px;
  background: rgba(0,0,0,0.6);
  margin: -10px 0 0 -10px;
  
  @include border-radius(2px);
  @include box-shadow (0 0 3px rgba(0,0,0,0.6));
  @include transform-style(preserve-3d);
  
  ul{
    $width: 20px; $height: 20px; $depth: 20px;
    $x: 0px; $y: 0px; $z: 5px;
    $rx: 0deg; $ry: 0deg; $rz: 0deg;
    @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
    
    li{
      opacity: 0.9;
      background: rgba(0,0,0,0.9) !important;
    }
    
    li:nth-child(2){
      background: rgba(255,255,255,0.9) !important;
    }
  }
}

span{
  display: none;
}

#box_1{
  $width: 80px; $height: 200px; $depth: 340px;
  $x: 20px; $y: 20px; $z: -100px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_2{
  $width: 80px; $height: 142px; $depth: 80px;
  $x: 20px; $y: 540px; $z: -100px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_3{
  $width: 80px; $height: 100px; $depth: 520px;
  $x: 420px;  $y: 100px; $z: -100px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_4{
  $width: 80px; $height: 132px; $depth: 160px;
  $x: 200px; $y: 20px; $z: -100px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_5{
  $width: 80px; $height: 173px; $depth: 80px;
  $x: 100px; $y: 280px; $z: -100px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_6{
  $width: 80px; $height: 151px; $depth: 80px;
  $x: 180px; $y: 280px; $z: -100px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_7{
  $width: 80px; $height: 133px; $depth: 80px;
  $x: 260px; $y: 280px; $z: -100px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_8{
  $width: 80px; $height: 116px; $depth: 80px;
  $x: 340px; $y: 280px; $z: -100px;
  $rx: 0deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_9{
  $width: 124px; $height: 20px; $depth: 80px;
  $x: 78px; $y: 20px; $z: 49px;
  $rx: 0deg; $ry: 34deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_10{
  $width: 144px; $height: 20px; $depth: 80px;
  $x: 275px; $y: 100px; $z: -2px;
  $rx: 0deg; $ry: 14deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_11{
  $width: 80px; $height: 20px; $depth: 190px;
  $x: 20px; $y: 350px; $z: 53px;
  $rx: -17.86deg; $ry: 0deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

#box_12{
  $width: 325px; $height: 20px; $depth: 80px;
  $x: 96px; $y: 540px; $z: 1px;
  $rx: 0deg; $ry: 7.5deg; $rz: 0deg;
  @include box($width,$height,$depth,$x,$y,$z,$rx,$ry,$rz);
}

body .platform{
  li:nth-child(2){
    background: rgba(255,255,255,0.9) !important;
  }
}

